--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "clusterjs": "^0.7.1",
     "core-js": "^3.6.5",
+    "d3": "^7.0.0",
     "dns": "^0.2.2",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "mathjs": "^9.4.4",
     "node-orientdb-http": "^0.1.1",
     "nodemon": "^2.0.9",
     "orientdb": "*",
     "orientdb-rest-api": "^1.1.2",
     "orientjs": "^3.0.11",
     "request": "^2.79.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-axios": "^3.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
